# airquality_station

./: .env.example  .gitignore  .gitmodules  00_main.py  00_simple_noGUI.py  README.md  cozir.py  cozir_test.py  ec_sense.py  ecsense.py  ecsense_student.py  local_db.py  no-gui.py  no_gui.py  pyproject.toml  requirements.txt  sensor-test.py  sensor_test.py  web_db.py
db_client/: config.json  main.py  stv_client.py
device_data/: README.md  airquality.db  airquality_old.db  analysis_notebook.ipynb  db_init.py  plot_no2.py
device_data/.ipynb_checkpoints/: analysis_notebook-checkpoint.ipynb
device_data/analysis/: data_retrieval_and_plot.ipynb
device_test/: test_sensorAssembly.py  test_ventilator.py
documents/: course-script.docx
lfu_analysis/: lfu-nalysis.ipynb
lfu_analysis/lfu_data/: O3_2019.xlsx  no2_2019.csv
lfu_analysis/traffic_data/: traffic-ladshuter-allee.csv
