[tool.poetry]
name = "airqualitystation"
version = "0.1.0"
description = "package for raspberrypi airquality station with ecsense sensors"
authors = ["Daniel Kühbacher"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
